Reorganizing /lib in /lib/cpu, /lib/ppu, /lib/apu

--- a/src/data/levels/05a_CPU/11_Instructions (5-5) - System/chat/en.yml
+++ b/src/data/levels/05a_CPU/11_Instructions (5-5) - System/chat/en.yml
@@ -74,7 +74,7 @@ implement:
   messages:
   - awesome
   - we'll model interrupts as `{ id, vector }` objects
-  - check out 📄  ~/lib/interrupts.js~
+  - check out 📄  ~/lib/cpu/interrupts.js~
   - |-
     📚  _-_add this method to your `CPU`:_--_
     **interrupt(interrupt, withBFlag = false)**:
