--- a/src/data/levels/05a_CPU/14_Operations/chat/es.yml
+++ b/src/data/levels/05a_CPU/14_Operations/chat/es.yml
@@ -21,7 +21,7 @@ multiple:
   messages:
   - exactamente eso ✔️
   - "aquí hay una función que define todos los opcodes por ti:"
-  - 📄  ~/lib/defineOperations.js~
+  - 📄  ~/lib/cpu/defineOperations.js~
   - solo necesitas llamarla, pasando los objetos `instructions` y `addressingModes`
   - |-
     📚  _-_agrega la siguiente propiedad a tu `CPU`:
