--- a/src/data/levels/05a_CPU/11_Instructions (5-5) - System/chat/es.yml
+++ b/src/data/levels/05a_CPU/11_Instructions (5-5) - System/chat/es.yml
@@ -74,7 +74,7 @@ implement:
   messages:
   - genial
   - vamos a modelar las interrupciones como objetos `{ id, vector }`
-  - revisa 📄  ~/lib/interrupts.js~
+  - revisa 📄  ~/lib/cpu/interrupts.js~
   - |-
     📚  _-_agrega este método a tu `CPU`:_--_
     **interrupt(interrupt, withBFlag = false)**:
