--- a/src/data/levels/04_Memory/02_Devices/chat/es.yml
+++ b/src/data/levels/04_Memory/02_Devices/chat/es.yml
@@ -8,7 +8,7 @@ main:
   - |-
     📚  _-_agrega a tu `CPUMemory` el siguiente método:_--_
     **onLoad(ppu, apu, mapper, controllers)**:
-      __-> guarda los parámetros como propiedades (this.ppu, this.apu, etc.)__
+      **->** guarda los parámetros como propiedades (~this.ppu~, ~this.apu~, etc.)
   responses:
   - ¿quién llama a ese método? [who]
 
