--- a/src/data/levels/05a_CPU/02_Registers/chat/en.yml
+++ b/src/data/levels/05a_CPU/02_Registers/chat/en.yml
@@ -5,9 +5,9 @@ main:
   - |-
     _-_they should have two methods:_--_
     **getValue()**:
-      __-> returns the register's content__
+      **->** returns the register's content
     **setValue(value)**:
-      __-> sets the register's content__
+      **->** sets the register's content
   - _-_the register's content starts from 0 and can be an 8-bit number (0-255) or a 16-bit number (0-65535), depending on the class_--_
   responses:
   - (*) what if I try to write off the limits? 🚫 [limit]
