--- a/src/data/levels/05a_CPU/02_Registers/chat/es.yml
+++ b/src/data/levels/05a_CPU/02_Registers/chat/es.yml
@@ -5,9 +5,9 @@ main:
   - |-
     _-_tendrían que tener dos métodos:_--_
     **getValue()**:
-      __-> retorna el contenido del registro__
+      **->** retorna el contenido del registro
     **setValue(value)**:
-      __-> asigna el contenido del registro__
+      **->** asigna el contenido del registro
   - _-_el contenido del registro comienza en 0 y puede ser un número de 8 bits (0-255) o uno de 16 bits (0-65535), dependiendo de la clase_--_
   responses:
   - (*) ¿y si trato de escribir fuera de los límites? 🚫 [limit]
