--- a/src/data/levels/05a_CPU/04_Helpers/chat/en.yml
+++ b/src/data/levels/05a_CPU/04_Helpers/chat/en.yml
@@ -5,15 +5,15 @@ main:
   - |-
     📚  _-_in your `Register8Bit` and `Register16Bit` classes, implement:_--_
     **increment()**:
-      __-> calls *setValue* with the result of getValue() + 1__
+      **->** calls ~setValue(...)~ with the result of ~getValue() + 1~
     **decrement()**:
-      __-> calls *setValue* with the result of getValue() - 1__
+      **->** calls ~setValue(...)~ with the result of ~getValue() - 1~
   - |-
     _-_in your `FlagsRegister`, implement:_--_
     **updateZero(value)**:
-      __-> sets z=true if value is 0, or z=false otherwise__
+      **->** sets ~z=true~ if ~value~ is 0, or ~z=false~ otherwise
     **updateNegative(value)**:
-      __-> sets n=true if byte.isNegative(value), or n=false otherwise__
+      **->** sets ~n=true~ if ~byte.isNegative(value)~, or ~n=false~ otherwise
     **updateZeroAndNegative(value)**:
-      __-> calls *updateZero* and *updateNegative* with the <value>__
+      **->** calls ~updateZero(...)~ and ~updateNegative(...)~ with the ~value~
   responses: []
