--- a/src/data/levels/05a_CPU/07_Instructions (1-5) - Arithmetic/chat/es.yml
+++ b/src/data/levels/05a_CPU/07_Instructions (1-5) - Arithmetic/chat/es.yml
@@ -16,7 +16,7 @@ howmany:
   - y algunas de ellas son muy similares
   - 📚  _-_crea un objeto siguiendo el mismo formato que el ejemplo_--_
   - _-_implementa cada una de las 16 instrucciones aritméticas sobre él_--_
-  - _-_y expórtalo bajo la clave `instructions` en ~/code/index.js~_--_
+  - _-_y expórtalo bajo la clave `instructions` en _--_📄 _-_ ~/code/index.js~_--_
   - _-_necesitas documentación acerca de qué debería hacer cada instrucción_--_
   - _-_así que revisa _--_📄 _-_ ~/docs/cpu/instructions.es.md~_--_
   responses:
