--- a/src/data/levels/05a_CPU/11_Instructions (5-5) - System/chat/es.yml
+++ b/src/data/levels/05a_CPU/11_Instructions (5-5) - System/chat/es.yml
@@ -78,17 +78,17 @@ implement:
   - |-
     📚  _-_agrega este método a tu `CPU`:_--_
     **interrupt(interrupt, withBFlag = false)**:
-      __-> si interrupt.id === "IRQ" y I=1, retorna 0
+      **->** si ~interrupt.id === "IRQ"~ y ~I=1~, retorna 0
         (la interrupción es ignorada)
-      -> pone [PC] en la pila
-      -> pone el byte de banderas en la pila
-        (si <withBFlag> es true, el valor se agrega a la pila con el bit 4 encendido)
+      **->** pone [PC] en la pila
+      **->** pone el byte de banderas en la pila
+        (si ~withBFlag~ es ~true~, el valor se agrega a la pila con el bit 4 encendido)
         (de lo contrario, se agrega tal cual está)
-      -> avanza 7 ciclos (this.cycle += 7)
-      -> asigna I=1 en el registro de banderas
-      -> asigna [PC] = al resultado de leer las direcciones (interrupt.vector) y (interrupt.vector + 1) en Little Endian
-        (recuerda que tienes un método *read16* para eso)
-      -> retorna 7__
+      **->** avanza 7 ciclos (~this.cycle += 7~)
+      **->** asigna ~I=1~ en el registro de banderas
+      **->** asigna [PC] = al resultado de leer las direcciones ~interrupt.vector~ y ~interrupt.vector+1~ en Little Endian
+        (recuerda que tienes un método ~read16(...)~ para eso)
+      **->** retorna 7
   responses:
   - ¿y BRK? [brk]
 
