--- a/src/data/levels/05a_CPU/15_Execute/chat/en.yml
+++ b/src/data/levels/05a_CPU/15_Execute/chat/en.yml
@@ -36,38 +36,39 @@ rightway:
   - |-
     📚  _-_first, we'll add these helper methods to your `CPU`:_--_
     **_fetchOperation()**:
-      __-> read a byte from the memory location that PC points at
-        (let's call this <opcode>)
-      -> find the operation related with that opcode: this.operations[opcode]
-        (let's call this <operation>)
-      -> if <operation> doesn't exist, throw an "Invalid opcode." error
-      -> increment PC
-      -> return <operation>__
+      **->** reads a byte from the memory location that [PC] points at
+        (let's call this ~opcode~)
+      **->** finds the operation related with that opcode:
+        ~this.operations[opcode]~
+        (let's call this ~operation~)
+      **->** if ~operation~ doesn't exist, throws an "Invalid opcode." error
+      **->** increments [PC]
+      **->** returns ~operation~
     **_fetchInput(operation)**:
-      __-> read 0, 1 (using read) or 2 bytes (using read16) from the memory location that PC points at, depending on operation.addressingMode.inputSize
-        (let's call this <input>)
-      -> increment PC (0, 1, or 2 times) to skip those bytes
-      -> return <input>__
+      **->** reads 0, 1 (using ~read(...)~) or 2 bytes (using ~read16(...)~) from the memory location that [PC] points at, depending on ~operation.addressingMode.inputSize~
+        (let's call this ~input~)
+      **->** increments [PC] (0, 1, or 2 times) to skip those bytes
+      **->** returns ~input~
     **_fetchArgument(operation, input)**:
-      __-> return the result of processing the <input> with the addressing mode
-      -> if operation.instruction.argument === "value", it should be:
-        operation.addressingMode.getValue(this, input, operation.hasPageCrossPenalty)
-      -> else:
-        operation.addressingMode.getAddress(this, input, operation.hasPageCrossPenalty)__
+      **->** returns the result of processing ~input~ with the addressing mode
+        - if ~operation.instruction.argument === "value"~, it should be:
+            ~operation.addressingMode.getValue(this, input, operation.hasPageCrossPenalty)~
+        - else:
+            ~operation.addressingMode.getAddress(this, input, operation.hasPageCrossPenalty)~
     **_addCycles(operation)**:
-      __-> calculate how many cycles the <operation> took (operation.cycles + this.extraCycles)
-        (let's call this <cycles>)
-      -> update the cycle counters:
-        this.cycle += cycles;
-        this.extraCycles = 0;
-      -> return <cycles>__
+      **->** calculates how many cycles the ~operation~ took:
+        ~operation.cycles + this.extraCycles~
+        (let's call this ~cycles~)
+      **->** updates the cycle counters:
+        ~this.cycle += cycles;~
+        ~this.extraCycles = 0;~
+      **->** returns ~cycles~
   responses:
   - what about the `step()` method you mentioned? [step]
 
 step:
   messages:
   - |-
-    // TODO: TRADUCIR
     _-_our `step()` method should come up easily, using the others:
       ```javascript step() {
         const originalPC = this.pc.getValue();
