--- a/src/data/levels/05b_PPU/01_New PPU/chat/es.yml
+++ b/src/data/levels/05b_PPU/01_New PPU/chat/es.yml
@@ -56,10 +56,9 @@ next:
   run: |
     set((m) => m.$exercise = true);
   messages:
-  - "📚  _-_crea un archivo para el código de la PPU usando esta plantilla:_--_"
-  - 📄 _-_ ~/tmpl/ppu/PPU.js~_--_
+  - 📚  _-_crea un archivo para el código de la PPU, usando _--_📄 _-_ ~/tmpl/ppu/PPU.js~ como plantilla_--_
   - |-
-    _-_y para llevar un seguimiento del tiempo, agrega este método:_--_
+    _-_para llevar un seguimiento del tiempo, agrega este método:_--_
     **step()**:
       **->** incrementa ~cycle~
       **->** si ~cycle >= 341~:
@@ -69,7 +68,7 @@ next:
           **->** asigna ~scanline = -1~
           **->** incrementa ~frame~
   - _-_luego, importa tu archivo desde _--_📄 _-_ ~/code/index.js~_--_
-  - _-_y agrega una clave `PPU` (que apunte a esa clase) al objeto exportado_--_
+  - _-_y agrega la correspondiente clave `PPU` al objeto exportado_--_
   responses:
   - ¿por qué el contador de scanlines comienza en -1? 😕 [minus1]
 
