--- a/src/data/levels/05a_CPU/02_Registers/chat/es.yml
+++ b/src/data/levels/05a_CPU/02_Registers/chat/es.yml
@@ -42,19 +42,11 @@ implement:
 nowwhat:
   messages:
   - |-
-    _-_entonces, agrega el siguiente constructor a tu clase `CPU`:
+    _-_luego, agrega lo siguiente al constructor de tu clase `CPU`:
       ```javascript
-      export default class CPU {
-        constructor(cpuMemory) {
-          this.memory = cpuMemory;
-          this.cycle = 0;
-          this.extraCycles = 0;
-
-          this.a = new Register8Bit();
-          this.x = new Register8Bit();
-          this.y = new Register8Bit();
-          this.sp = new Register8Bit();
-          this.pc = new Register16Bit();
-        }
-      }```_--_
+      this.a = new Register8Bit();
+      this.x = new Register8Bit();
+      this.y = new Register8Bit();
+      this.sp = new Register8Bit();
+      this.pc = new Register16Bit();```_--_
   responses: []
