--- a/src/data/levels/05b_PPU/01_New PPU/chat/en.yml
+++ b/src/data/levels/05b_PPU/01_New PPU/chat/en.yml
@@ -33,6 +33,7 @@ same:
   messages:
   - conceptually, yes, but the 🖥️  PPU runs 3x faster than the 🧠  CPU
   - so PPU cycles are faster (each PPU cycle is, in time, ~1/3~ of a CPU cycle)
+  - <{unit_speeds.png}>
   responses:
   - ...cycles
 
