--- a/src/data/levels/05b_PPU/02_Frame buffer/chat/en.yml
+++ b/src/data/levels/05b_PPU/02_Frame buffer/chat/en.yml
@@ -61,12 +61,13 @@ draw:
     📚  _-_ok, let's add this to your PPU's constructor:
       ```javascript
       this.frameBuffer = new Uint32Array(256*240);
-      // fill the first 120 rows with red:
-      for (let i = 0; i < 256 * 120; i++)
+
+      // fill the entire screen with red:
+      for (let i = 0; i < 256 * 240; i++)
         this.frameBuffer[i] = 0xff0000ff;```_--_
-  - _-_modify your `step` method so it receives an `onFrame` callback_--_
+  - _-_modify your `step` method so it receives an `onFrame` callback as parameter_--_
   - |-
     _-_then, every time you detect a new frame (right after ```javascript this.frame++;```), call it with the frame buffer, like this:
       ```javascript onFrame(this.frameBuffer);```_--_
-  - _-_try it! when loading a ROM, it should paint in red the upper half of the screen _--_🔴
+  - _-_try it! when loading a ROM, it should paint the screen in red _--_🔴
   responses: []
